--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -91,16 +91,14 @@ COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
 COPY --from=build         /app/dist/apps   ./dist/apps
 
 FROM build-base as acx-ui-group-test
+
 COPY cicd_tools ./cicd_tools
-COPY test_cases.table ./test_cases.table
 RUN chmod a+x ./cicd_tools/run_test_cases_tool.sh
+
 ARG PRECOMMIT=true
 ARG GIT_COMMIT_BRANCH=master
-ARG RUN_COMMAND="node ./node_modules/.bin/nx"
 RUN if [[ "$PRECOMMIT" == "true" || "$GIT_COMMIT_BRANCH" == "master" ]]; then \
-        while IFS= read -r nx_param; do \
-            ( ${RUN_COMMAND} ${nx_param} ); \
-        done < ./test_cases.table; \
+        ./cicd_tools/run_test_cases_tool.sh; \
     else mkdir -p /app/coverage; fi
 
 FROM build-base as acx-ui-sonar-run
