--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -97,9 +97,11 @@ RUN chmod a+x ./cicd_tools/run_test_cases_tool.sh
 
 ARG PRECOMMIT=true
 ARG GIT_COMMIT_BRANCH=master
-RUN if [[ "$PRECOMMIT" == "true" || "$GIT_COMMIT_BRANCH" == "master" ]]; then \
-        ( ./cicd_tools/run_test_cases_tool.sh ) ; \
-    else mkdir -p /app/coverage; fi
+#RUN if [[ "$PRECOMMIT" == "true" || "$GIT_COMMIT_BRANCH" == "master" ]]; then \
+#        ./cicd_tools/run_test_cases_tool.sh; \
+#    else mkdir -p /app/coverage; fi
+
+RUN ./cicd_tools/run_test_cases_tool.sh
 
 FROM build-base as acx-ui-sonar-run
 COPY --from=acx-ui-group-test /app/coverage /app/coverage
