--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -97,7 +97,7 @@ RUN chmod a+x ./cicd_tools/run_test_cases_tool.sh
 
 ARG PRECOMMIT=true
 ARG GIT_COMMIT_BRANCH=master
-RUN if [ "$PRECOMMIT" = "true" || "$GIT_COMMIT_BRANCH" = "master" ]; then \
+RUN if [ "$PRECOMMIT" = "true" ] || [ "$GIT_COMMIT_BRANCH" = "master" ]; then \
         ./cicd_tools/run_test_cases_tool.sh; \
     else mkdir -p /app/coverage; fi
 
