--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -92,13 +92,23 @@ COPY --from=build         /app/dist/apps   ./dist/apps
 
 FROM build-base as acx-ui-group-test
 
+COPY test_cases.table ./test_cases.table
 COPY cicd_tools ./cicd_tools
 RUN chmod a+x ./cicd_tools/run_test_cases_tool.sh
 
 ARG PRECOMMIT=true
 ARG GIT_COMMIT_BRANCH=master
-RUN if [ "$PRECOMMIT" = "true" ] || [ "$GIT_COMMIT_BRANCH" = "master" ]; then \
-        ./cicd_tools/run_test_cases_tool.sh; \
+#RUN if [ "$PRECOMMIT" = "true" ] || [ "$GIT_COMMIT_BRANCH" = "master" ]; then \
+#        ./cicd_tools/run_test_cases_tool.sh; \
+#    else mkdir -p /app/coverage; fi
+
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
+        while read -r line; do \
+            case "$line" in \
+                \#*|"") continue ;;  \
+                *) echo "Executing: $line"; sh -c "$line" ;; \
+            esac \
+        done < ./test_cases.table ;\
     else mkdir -p /app/coverage; fi
 
 FROM build-base as acx-ui-sonar-run
