--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -106,7 +106,7 @@ ARG RUN_COMMAND="node ./node_modules/.bin/nx"
 RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         while read -r line; do \
             case "$line" in \
-                \#*|"") continue ;;  \
+                \#*|"") set -xe; continue ;;  \
                 *) echo "Executing: $line"; sh -c "$RUN_COMMAND $line" ;; \
             esac \
         done < ./test_cases.table ;\
