--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -56,12 +56,12 @@ RUN source ${ENV_FILE} \
 
 ###############################################################
 FROM build-base as acx-ui-lint
-RUN node ./node_modules/.bin/nx run-many --target=lint --all --verbose
+#RUN node ./node_modules/.bin/nx run-many --target=lint --all --verbose
 RUN touch lint-done
 
 # We should validate the tsc validator in the tsconfig of apps that wont be built yet
-FROM build-base as acx-ui-tslint
-RUN node ./node_modules/.bin/nx run ra:tsc
+#FROM build-base as acx-ui-tslint
+#RUN node ./node_modules/.bin/nx run ra:tsc
 ###############################################################
 FROM ${GAR_CONTAINER_URL}node:14.21.1-alpine as build-locales
 WORKDIR /app
@@ -81,7 +81,7 @@ RUN tools/docker/locales/generate.sh
 
 FROM build-base as build
 COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
-RUN node ./node_modules/.bin/nx run main:build
+#RUN node ./node_modules/.bin/nx run main:build
 
 ###############################################################
 FROM build-base as acx-ui-base-test
@@ -98,18 +98,9 @@ RUN chmod a+x ./cicd_tools/run_test_cases_tool.sh
 
 ARG PRECOMMIT=true
 ARG GIT_COMMIT_BRANCH=master
-ARG RUN_COMMAND="node ./node_modules/.bin/nx"
-#RUN if [ "$PRECOMMIT" = "true" ] || [ "$GIT_COMMIT_BRANCH" = "master" ]; then \
-#        ./cicd_tools/run_test_cases_tool.sh; \
-#    else mkdir -p /app/coverage; fi
 
 RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
-        while read -r line; do \
-            case "$line" in \
-                \#*|"") set -xe; continue ;;  \
-                *) echo "Executing: $line"; sh -c "$RUN_COMMAND $line" ;; \
-            esac \
-        done < ./test_cases.table ;\
+        ./cicd_tools/run_test_cases_tool.sh 
     else mkdir -p /app/coverage; fi
 
 FROM build-base as acx-ui-sonar-run
