--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -84,11 +84,11 @@ COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
 #RUN node ./node_modules/.bin/nx run main:build
 
 ###############################################################
-FROM build-base as acx-ui-base-test
+#FROM build-base as acx-ui-base-test
 
 # Force dependency with lint & build stages
-COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
-COPY --from=build         /app/dist/apps   ./dist/apps
+#COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
+#COPY --from=build         /app/dist/apps   ./dist/apps
 
 FROM build-base as acx-ui-group-test
 
