--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -3,57 +3,56 @@ ARG GAR_CONTAINER_URL
 ARG GAR_DOCKER_ROOT_URL
 
 FROM ${GAR_DOCKER_ROOT_URL}/acx-service/acx-ui-cache/nx-cache:latest as nx-cache
-#FROM ${CI_SERVICE_BASE}node:master--latest as build-base
-FROM us-docker.pkg.dev/alto-cicd/acx-service/baseimage/acx-ui-unit-test-base:latest as build-base
+FROM ${CI_SERVICE_BASE}node:master--latest as build-base
 
-#WORKDIR /app
+WORKDIR /app
 
-#RUN apk add curl
+RUN apk add curl
 
-#ARG ENV_FILE
-#COPY ${ENV_FILE} .
-#RUN source ${ENV_FILE} \
-#  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
-#  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
+ARG ENV_FILE
+COPY ${ENV_FILE} .
+RUN source ${ENV_FILE} \
+  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
+  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
 
 # Install dependencies
-#COPY package.json package-lock.json ./
-#COPY patches ./patches
-#COPY tools/dev/eslint-custom-rule ./tools/dev/eslint-custom-rule
-#RUN npm install
+COPY package.json package-lock.json ./
+COPY patches ./patches
+COPY tools/dev/eslint-custom-rule ./tools/dev/eslint-custom-rule
+RUN npm install
 
-#COPY .eslintignore \
-#  .eslintrc.json \
-#  babel.config.json \
-#  jest.config.ts \
-#  jest.preset.ts \
-#  jest.setup.js \
-#  jest.build.setup.js \
-#  nx.json \
-#  webpack.config.base.js \
-#  tsconfig.base.json \
-#  workspace.json \
-#  ./
+COPY .eslintignore \
+  .eslintrc.json \
+  babel.config.json \
+  jest.config.ts \
+  jest.preset.ts \
+  jest.setup.js \
+  jest.build.setup.js \
+  nx.json \
+  webpack.config.base.js \
+  tsconfig.base.json \
+  workspace.json \
+  ./
 
-#COPY .storybook ./.storybook
-#COPY apps ./apps
-#COPY libs ./libs
+COPY .storybook ./.storybook
+COPY apps ./apps
+COPY libs ./libs
 
 ENV NODE_OPTIONS=--max-old-space-size=4096
 ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
 
-#COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
+COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
 
 # Remove files and folders older than 24 hours from the nx cache
-#RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
-#    find /app/node_modules/.cache/nx -type d -empty -delete
+RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
+    find /app/node_modules/.cache/nx -type d -empty -delete
 
-#COPY tools/tests ./tools/tests
+COPY tools/tests ./tools/tests
 
 # dump git information
-#RUN source ${ENV_FILE} \
-#  && echo NX_GIT_SHA=$DRONE_COMMIT_SHA >> .env \
-#  && echo NX_GIT_DATE=\'$(date -R "@$((DRONE_BUILD_CREATED))")\' >> .env
+RUN source ${ENV_FILE} \
+  && echo NX_GIT_SHA=$DRONE_COMMIT_SHA >> .env \
+  && echo NX_GIT_DATE=\'$(date -R "@$((DRONE_BUILD_CREATED))")\' >> .env
 
 ###############################################################
 FROM build-base as acx-ui-lint
@@ -64,24 +63,24 @@ RUN touch lint-done
 #FROM build-base as acx-ui-tslint
 #RUN node ./node_modules/.bin/nx run ra:tsc
 ###############################################################
-FROM ${GAR_CONTAINER_URL}node:14.21.1-alpine as build-locales
-WORKDIR /app
-RUN apk add curl
-ARG ENV_FILE
-COPY ${ENV_FILE} .
-RUN source ${ENV_FILE} \
-  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
-  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
-COPY package.json ./
-RUN npm install react-intl lodash
-COPY apps ./apps
-COPY libs ./libs
-COPY tools/docker/locales ./tools/docker/locales
-RUN chmod +x tools/docker/locales/generate.sh
-RUN tools/docker/locales/generate.sh
+#FROM ${GAR_CONTAINER_URL}node:14.21.1-alpine as build-locales
+#WORKDIR /app
+#RUN apk add curl
+#ARG ENV_FILE
+#COPY ${ENV_FILE} .
+#RUN source ${ENV_FILE} \
+#  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
+#  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
+#COPY package.json ./
+#RUN npm install react-intl lodash
+#COPY apps ./apps
+#COPY libs ./libs
+#COPY tools/docker/locales ./tools/docker/locales
+#RUN chmod +x tools/docker/locales/generate.sh
+#RUN tools/docker/locales/generate.sh
 
-FROM build-base as build
-COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
+#FROM build-base as build
+#COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
 #RUN node ./node_modules/.bin/nx run main:build
 
 ###############################################################
