--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -103,10 +103,10 @@ RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_
         ./cicd_tools/run_test_cases_tool.sh; \
     else mkdir -p /app/coverage; fi
 
-FROM build-base as acx-ui-sonar-run
-COPY --from=acx-ui-group-test /app/coverage /app/coverage
-WORKDIR /app
-RUN touch tests-done
+#FROM build-base as acx-ui-sonar-run
+#COPY --from=acx-ui-group-test /app/coverage /app/coverage
+#WORKDIR /app
+#RUN touch tests-done
 
 ###############################################################
 #FROM ${GAR_CONTAINER_URL}nginx:1.21.6-alpine
