--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -55,9 +55,9 @@ RUN source ${ENV_FILE} \
   && echo NX_GIT_DATE=\'$(date -R "@$((DRONE_BUILD_CREATED))")\' >> .env
 
 ###############################################################
-FROM build-base as acx-ui-lint
+#FROM build-base as acx-ui-lint
 #RUN node ./node_modules/.bin/nx run-many --target=lint --all --verbose
-RUN touch lint-done
+#RUN touch lint-done
 
 # We should validate the tsc validator in the tsconfig of apps that wont be built yet
 #FROM build-base as acx-ui-tslint
