--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -44,15 +44,15 @@ ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
 COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
 
 # Remove files and folders older than 24 hours from the nx cache
-RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
-    find /app/node_modules/.cache/nx -type d -empty -delete
+#RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
+#    find /app/node_modules/.cache/nx -type d -empty -delete
 
 COPY tools/tests ./tools/tests
 
 # dump git information
-RUN source ${ENV_FILE} \
-  && echo NX_GIT_SHA=$DRONE_COMMIT_SHA >> .env \
-  && echo NX_GIT_DATE=\'$(date -R "@$((DRONE_BUILD_CREATED))")\' >> .env
+#RUN source ${ENV_FILE} \
+#  && echo NX_GIT_SHA=$DRONE_COMMIT_SHA >> .env \
+#  && echo NX_GIT_DATE=\'$(date -R "@$((DRONE_BUILD_CREATED))")\' >> .env
 
 ###############################################################
 #FROM build-base as acx-ui-lint
@@ -90,7 +90,8 @@ RUN source ${ENV_FILE} \
 #COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
 #COPY --from=build         /app/dist/apps   ./dist/apps
 
-FROM build-base as acx-ui-group-test
+#FROM build-base as acx-ui-group-test
+FROM build-base
 
 COPY test_cases.table ./test_cases.table
 COPY cicd_tools ./cicd_tools
