--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -34,10 +34,9 @@ COPY .eslintignore \
   workspace.json \
   ./
 
-#COPY .storybook ./.storybook
-#COPY apps ./apps
-#COPY libs ./libs
-COPY . .
+COPY .storybook ./.storybook
+COPY apps ./apps
+COPY libs ./libs
 
 #ENV NODE_OPTIONS=--max-old-space-size=4096
 #ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
@@ -48,7 +47,7 @@ COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
 #RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
 #    find /app/node_modules/.cache/nx -type d -empty -delete
 
-#COPY tools/tests ./tools/tests
+COPY tools/tests ./tools/tests
 
 # dump git information
 #RUN source ${ENV_FILE} \
