--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -2,7 +2,7 @@ ARG CI_SERVICE_BASE
 ARG GAR_CONTAINER_URL
 ARG GAR_DOCKER_ROOT_URL
 
-FROM ${GAR_DOCKER_ROOT_URL}/acx-service/acx-ui-cache/nx-cache:latest as nx-cache
+#FROM ${GAR_DOCKER_ROOT_URL}/acx-service/acx-ui-cache/nx-cache:latest as nx-cache
 FROM ${CI_SERVICE_BASE}node:master--latest as build-base
 
 WORKDIR /app
@@ -38,59 +38,59 @@ COPY .storybook ./.storybook
 COPY apps ./apps
 COPY libs ./libs
 
-#ENV NODE_OPTIONS=--max-old-space-size=4096
-#ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
+ENV NODE_OPTIONS=--max-old-space-size=4096
+ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
 
-COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
+#COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
 
 # Remove files and folders older than 24 hours from the nx cache
-#RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
-#    find /app/node_modules/.cache/nx -type d -empty -delete
+RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
+    find /app/node_modules/.cache/nx -type d -empty -delete
 
 COPY tools/tests ./tools/tests
 
 # dump git information
-#RUN source ${ENV_FILE} \
-#  && echo NX_GIT_SHA=$DRONE_COMMIT_SHA >> .env \
-#  && echo NX_GIT_DATE=\'$(date -R "@$((DRONE_BUILD_CREATED))")\' >> .env
+RUN source ${ENV_FILE} \
+  && echo NX_GIT_SHA=$DRONE_COMMIT_SHA >> .env \
+  && echo NX_GIT_DATE=\'$(date -R "@$((DRONE_BUILD_CREATED))")\' >> .env
 
 ###############################################################
-#FROM build-base as acx-ui-lint
-#RUN node ./node_modules/.bin/nx run-many --target=lint --all --verbose
-#RUN touch lint-done
+FROM build-base as acx-ui-lint
+RUN node ./node_modules/.bin/nx run-many --target=lint --all --verbose
+RUN touch lint-done
 
 # We should validate the tsc validator in the tsconfig of apps that wont be built yet
-#FROM build-base as acx-ui-tslint
-#RUN node ./node_modules/.bin/nx run ra:tsc
+FROM build-base as acx-ui-tslint
+RUN node ./node_modules/.bin/nx run ra:tsc
 ###############################################################
-#FROM ${GAR_CONTAINER_URL}node:14.21.1-alpine as build-locales
-#WORKDIR /app
-#RUN apk add curl
-#ARG ENV_FILE
-#COPY ${ENV_FILE} .
-#RUN source ${ENV_FILE} \
-#  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
-#  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
-#COPY package.json ./
-#RUN npm install react-intl lodash
-#COPY apps ./apps
-#COPY libs ./libs
-#COPY tools/docker/locales ./tools/docker/locales
-#RUN chmod +x tools/docker/locales/generate.sh
-#RUN tools/docker/locales/generate.sh
+FROM ${GAR_CONTAINER_URL}node:14.21.1-alpine as build-locales
+WORKDIR /app
+RUN apk add curl
+ARG ENV_FILE
+COPY ${ENV_FILE} .
+RUN source ${ENV_FILE} \
+  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
+  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
+COPY package.json ./
+RUN npm install react-intl lodash
+COPY apps ./apps
+COPY libs ./libs
+COPY tools/docker/locales ./tools/docker/locales
+RUN chmod +x tools/docker/locales/generate.sh
+RUN tools/docker/locales/generate.sh
 
-#FROM build-base as build
-#COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
-#RUN node ./node_modules/.bin/nx run main:build
+FROM build-base as build
+COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
+RUN node ./node_modules/.bin/nx run main:build
 
 ###############################################################
-#FROM build-base as acx-ui-base-test
+FROM build-base as acx-ui-base-test
 
 # Force dependency with lint & build stages
-#COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
-#COPY --from=build         /app/dist/apps   ./dist/apps
+COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
+COPY --from=build         /app/dist/apps   ./dist/apps
 
-#FROM build-base as acx-ui-group-test
+FROM build-base as acx-ui-group-test
 FROM build-base
 
 COPY test_cases.table ./test_cases.table
@@ -104,37 +104,37 @@ RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_
         ./cicd_tools/run_test_cases_tool.sh; \
     else mkdir -p /app/coverage; fi
 
-#FROM build-base as acx-ui-sonar-run
-#COPY --from=acx-ui-group-test /app/coverage /app/coverage
-#WORKDIR /app
-#RUN touch tests-done
+FROM build-base as acx-ui-sonar-run
+COPY --from=acx-ui-group-test /app/coverage /app/coverage
+WORKDIR /app
+RUN touch tests-done
 
 ###############################################################
-#FROM ${GAR_CONTAINER_URL}nginx:1.21.6-alpine
+FROM ${GAR_CONTAINER_URL}nginx:1.21.6-alpine
 
-#WORKDIR /usr/share/nginx/html
+WORKDIR /usr/share/nginx/html
 
 # Remove default nginx static assets
-#RUN rm -rf ./*
+RUN rm -rf ./*
 
-#COPY tools/docker/nginx/conf.d/* /etc/nginx/conf.d/
-#COPY tools/docker/nginx/nginx.conf \
-#  tools/docker/nginx/start-nginx.sh \
-#  tools/docker/nginx/globalValues.json.template \
-#  /etc/nginx/
+COPY tools/docker/nginx/conf.d/* /etc/nginx/conf.d/
+COPY tools/docker/nginx/nginx.conf \
+  tools/docker/nginx/start-nginx.sh \
+  tools/docker/nginx/globalValues.json.template \
+  /etc/nginx/
 
-#COPY --from=build /app/dist/apps ./
+COPY --from=build /app/dist/apps ./
 # Multistage: trigger run
-#COPY --from=acx-ui-sonar-run /app/tests-done /tmp/
+COPY --from=acx-ui-sonar-run /app/tests-done /tmp/
 
-#RUN \
+RUN \
   # Create structure to match deployment need
-#  mkdir -p tenant/t && \
-#  # Move all files into it
-#  mv -v main/* tenant/t/. && \
-#  # Remove the main folder
-#  rm -rf main
+  mkdir -p tenant/t && \
+  # Move all files into it
+  mv -v main/* tenant/t/. && \
+  # Remove the main folder
+  rm -rf main
 
-#EXPOSE 8080
+EXPOSE 8080
 
-#CMD ["/bin/sh", "/etc/nginx/start-nginx.sh"]
+CMD ["/bin/sh", "/etc/nginx/start-nginx.sh"]
