--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -49,9 +49,6 @@ RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
 
 COPY tools/tests ./tools/tests
 
-RUN chmod +x tools/docker/locales/generate.sh
-RUN tools/docker/locales/generate.sh
-
 # dump git information
 RUN source ${ENV_FILE} \
   && echo NX_GIT_SHA=$DRONE_COMMIT_SHA >> .env \
@@ -66,7 +63,24 @@ RUN touch lint-done
 FROM build-base as acx-ui-tslint
 RUN node ./node_modules/.bin/nx run ra:tsc
 ###############################################################
+FROM ${GAR_CONTAINER_URL}node:14.21.1-alpine as build-locales
+WORKDIR /app
+RUN apk add curl
+ARG ENV_FILE
+COPY ${ENV_FILE} .
+RUN source ${ENV_FILE} \
+  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
+  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
+COPY package.json ./
+RUN npm install react-intl lodash
+COPY apps ./apps
+COPY libs ./libs
+COPY tools/docker/locales ./tools/docker/locales
+RUN chmod +x tools/docker/locales/generate.sh
+RUN tools/docker/locales/generate.sh
+
 FROM build-base as build
+COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
 RUN node ./node_modules/.bin/nx run main:build --memoryLimit=4096
 
 ###############################################################
@@ -89,10 +103,7 @@ RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_
         CICD_BUILD=true node ./node_modules/.bin/nx run rc-components:test $NX_RUN_OPTIONS; \
     fi
 RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
-        CICD_BUILD=true node ./node_modules/.bin/nx run-many --target=test --projects=main $NX_RUN_OPTIONS; \
-    fi
-RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
-        CICD_BUILD=true node ./node_modules/.bin/nx run-many --target=test --projects=main-components $NX_RUN_OPTIONS; \
+        CICD_BUILD=true node ./node_modules/.bin/nx run-many --target=test --projects=main,main-components $NX_RUN_OPTIONS; \
     fi
 RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run analytics-components:test $NX_RUN_OPTIONS; \
