ACX-72866: Remove build-locales

--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -37,6 +37,7 @@ COPY .eslintignore \
 COPY .storybook ./.storybook
 COPY apps ./apps
 COPY libs ./libs
+COPY tools/docker/locales ./tools/docker/locales
 
 ENV NODE_OPTIONS=--max-old-space-size=4096
 ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
@@ -48,6 +49,10 @@ RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
     find /app/node_modules/.cache/nx -type d -empty -delete
 
 COPY tools/tests ./tools/tests
+
+# Build locales
+RUN chmod +x tools/docker/locales/generate.sh
+RUN tools/docker/locales/generate.sh
 
 # dump git information
 RUN source ${ENV_FILE} \
@@ -63,24 +68,8 @@ RUN touch lint-done
 FROM build-base as acx-ui-tslint
 RUN node ./node_modules/.bin/nx run ra:tsc
 ###############################################################
-FROM ${GAR_CONTAINER_URL}node:14.21.1-alpine as build-locales
-WORKDIR /app
-RUN apk add curl
-ARG ENV_FILE
-COPY ${ENV_FILE} .
-RUN source ${ENV_FILE} \
-  && npm config set registry "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/npm/" \
-  && curl -u "${ARTI_USER}:${ARTI_PASSWORD}" "http://artifactory.cicd.rks-cloud.com/artifactory/api/npm/auth" >> ~/.npmrc
-COPY package.json ./
-RUN npm install react-intl lodash
-COPY apps ./apps
-COPY libs ./libs
-COPY tools/docker/locales ./tools/docker/locales
-RUN chmod +x tools/docker/locales/generate.sh
-RUN tools/docker/locales/generate.sh
 
 FROM build-base as build
-COPY --from=build-locales /app/apps/main/src/locales ./apps/main/src/locales
 RUN node ./node_modules/.bin/nx run main:build --memoryLimit=4096
 
 ###############################################################
