CICD-727 [ACX-UI] Extract test cases into scripts to increase usability.

--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -96,9 +96,7 @@ COPY cicd_tools ./cicd_tools
 
 ARG PRECOMMIT=true
 ARG GIT_COMMIT_BRANCH=master
-RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
-        ./cicd_tools/run_test_cases_tool.sh; \
-    else mkdir -p /app/coverage; fi
+RUN bash ./cicd_tools/run_test_cases_tool.sh
 
 FROM build-base as acx-ui-sonar-run
 COPY --from=acx-ui-group-test /app/coverage /app/coverage
