--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -76,7 +76,7 @@ COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
 COPY --from=build         /app/dist/apps   ./dist/apps
 
 FROM build-base as acx-ui-group-test
-
+ENV CICD_BUILD=true
 COPY cicd_tools ./cicd_tools
 
 ARG PRECOMMIT=true
