--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -77,6 +77,9 @@ COPY --from=build         /app/dist/apps   ./dist/apps
 
 FROM build-base as acx-ui-group-test
 
+# Multistage: trigger run
+COPY --from=acx-ui-lint /app/lint-done /tmp/
+COPY --from=acx-ui-tslint /app/tslint-done /tmp/
 COPY cicd_tools ./cicd_tools
 
 ARG PRECOMMIT=true
@@ -105,8 +108,6 @@ COPY tools/docker/nginx/nginx.conf \
 
 COPY --from=build /app/dist/apps ./
 # Multistage: trigger run
-COPY --from=acx-ui-lint /app/lint-done /tmp/
-COPY --from=acx-ui-tslint /app/tslint-done /tmp/
 COPY --from=acx-ui-sonar-run /app/tests-done /tmp/
 
 RUN \
