--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -69,6 +69,12 @@ FROM build-base as build
 RUN node ./node_modules/.bin/nx run main:build --memoryLimit=4096
 
 ###############################################################
+FROM build-base as acx-ui-base-test
+
+# Force dependency with lint & build stages
+COPY --from=acx-ui-lint   /app/lint-done   ./lint-done
+COPY --from=build         /app/dist/apps   ./dist/apps
+
 FROM build-base as acx-ui-group-test
 
 # Multistage: trigger run
