--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -60,12 +60,12 @@ RUN node ./node_modules/.bin/nx run-many --target=lint --all --verbose
 RUN touch lint-done
 
 # We should validate the tsc validator in the tsconfig of apps that wont be built yet
-FROM acx-ui-lint as acx-ui-tslint
-RUN node ./node_modules/.bin/nx run ra:tsc
-RUN touch tslint-done
+# FROM acx-ui-lint as acx-ui-tslint
+# RUN node ./node_modules/.bin/nx run ra:tsc
+# RUN touch tslint-done
 ###############################################################
 
-FROM acx-ui-tslint as build
+FROM acx-ui-lint as build
 RUN node ./node_modules/.bin/nx run main:build --memoryLimit=4096
 
 ###############################################################
