--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -7,7 +7,7 @@ FROM ${CI_SERVICE_BASE}node:master--latest as build-base
 
 WORKDIR /app
 
-RUN apk add curl git
+RUN apk add curl
 
 ARG ENV_FILE
 COPY ${ENV_FILE} .
@@ -19,7 +19,6 @@ RUN source ${ENV_FILE} \
 COPY package.json package-lock.json ./
 
 ARG GIT_COMMIT_BRANCH
-RUN git submodule update --init --recursive
 COPY patches ./patches
 COPY tools/dev/eslint-custom-rule ./tools/dev/eslint-custom-rule
 RUN npm install
