--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -18,7 +18,7 @@ RUN source ${ENV_FILE} \
 # Install dependencies
 COPY package.json package-lock.json ./
 
-ARG GIT_COMMIT_BRANCH
+ARG GIT_PR_SOURCE_BRANCH
 COPY patches ./patches
 COPY tools/dev/eslint-custom-rule ./tools/dev/eslint-custom-rule
 RUN npm install
@@ -51,7 +51,7 @@ RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
 
 COPY tools/tests ./tools/tests
 
-ADD nxcache/${GIT_COMMIT_BRANCH}/nxcache.tar.xz* ./node_modules/.cache/nx
+ADD nxcache/${GIT_PR_SOURCE_BRANCH}/nxcache.tar.xz* ./node_modules/.cache/nx
 
 # dump git information
 RUN source ${ENV_FILE} \
@@ -88,28 +88,28 @@ ARG GIT_COMMIT_BRANCH
 
 ENV NX_RUN_OPTIONS="--coverage --maxWorkers=40% --noStackTrace --bail"
 
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run rc:test $NX_RUN_OPTIONS; \
     fi
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run rc-components:test $NX_RUN_OPTIONS; \
     fi
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run main:test $NX_RUN_OPTIONS; \
     fi
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run main-components:test $NX_RUN_OPTIONS; \
     fi
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run analytics-components:test $NX_RUN_OPTIONS; \
     fi
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run msp-components:test $NX_RUN_OPTIONS; \
     fi
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run msp:test $NX_RUN_OPTIONS; \
     fi
-RUN if true; then \
+RUN if [ -z "${PRECOMMIT}" ] || [ "${PRECOMMIT}" == "true" ] || [ "${GIT_COMMIT_BRANCH}" == "master" ]; then \
         CICD_BUILD=true node ./node_modules/.bin/nx run-many --target=test --all --exclude=rc,rc-components,main,analytics-components,msp,msp-components,main-components $NX_RUN_OPTIONS; \
     fi
 
