--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -1,6 +1,7 @@
 ARG CI_SERVICE_BASE
 ARG GAR_CONTAINER_URL
 ARG GAR_DOCKER_ROOT_URL
+ARG GAR_CICD_BASEIMAGE_CONTAINER_URL
 
 # Avoid "docker build" for more than one hour, causing gcloud credential to time out.
 # So we need to execute "pull image" first.
